--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "express": "^4.18.3",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
